# eduos

./: CMakeLists.txt  GNUmakefile  README.md
cmake/: limine.cmake  toolchain.cmake  uefi.cmake
doc/: building.md  todo.md
src/: GNUmakefile  boot.s  kernel.c
src/kernel/: CMakeLists.txt
